Add getUser route 2 controller + fetchUser 2 view
